back when editing

--- a/templates/student/edit.html.twig
+++ b/templates/student/edit.html.twig
@@ -4,4 +4,9 @@
 
 {% block body %}
     {{ form(form) }}
+    <button type="button" class="btn btn-outline-success">
+        <a href="/create/student" style="text-decoration: none;">
+            Add Student
+        </a>
+    </button>
 {% endblock %}
