back when editing

--- a/templates/student/edit.html.twig
+++ b/templates/student/edit.html.twig
@@ -5,8 +5,8 @@
 {% block body %}
     {{ form(form) }}
     <button type="button" class="btn btn-outline-success">
-        <a href="/create/student" style="text-decoration: none;">
-            Add Student
+        <a href="/" style="text-decoration: none;">
+            Back
         </a>
     </button>
 {% endblock %}
