back when editing

--- a/templates/student/create.html.twig
+++ b/templates/student/create.html.twig
@@ -7,7 +7,7 @@
 
     <button type="button" class="btn btn-outline-danger">
         <a href="/" style="text-decoration: none; color: #222222;">
-            Retour
+            Back
         </a>
     </button>
 
