--- a/templates/student/edit.html.twig
+++ b/templates/student/edit.html.twig
@@ -4,8 +4,8 @@
 
 {% block body %}
     {{ form(form) }}
-    <button type="button" class="btn btn-outline-success">
-        <a href="/" style="text-decoration: none;">
+    <button type="button" class="btn btn-outline-danger">
+        <a href="/" style="text-decoration: none; color: #222222;">
             Back
         </a>
     </button>
